# live-draw-gstreamer

./: .clang-format  .gitignore  CONTRIBUTING.md  Info.plist  PRODUCTION_READINESS_REPORT.md  README.md  VIDEO_RENDERING_FIX.md  meson.build  meson_options.txt
.atlas/logs/: execution_state.json  nlp_analysis.json  planning_state.json  task_assignment.txt  ttl_original.md
.cache/clangd/index/: app_context.c.BE8F9EEB51829DF9.idx  app_context.h.03890B40EE384766.idx  app_error.c.4DEF745DB90E7C03.idx  app_error.h.A9524930F4E71679.idx  buffer_manager.c.B4746819DBA4862C.idx  buffer_manager.h.5A32B996FCBA7895.idx  camera_permissions.m.900A78B5891556AB.idx  camera_source.c.1697DA8EFD07CE0E.idx  camera_source.h.534499A495A3F806.idx  cleanup_handlers.c.52F04087AEBC8284.idx  cleanup_handlers.h.1F34B24A26287542.idx  composite_caps.c.CEC6C39A51BDED21.idx  composite_caps.h.7E98965CCFB8E9EA.idx  e2e_coordinator.c.EF48E8090BAF67B0.idx  e2e_coordinator.h.6C748F1B869CE736.idx  error_dialog.h.D213A064423850F0.idx  error_dialog.m.F91A1C9F577CEF12.idx  gst_elements.c.1AF4D85392991CD6.idx  gst_elements.h.77F23D5C12BAC400.idx  gstreamer_error_handler.c.3EE06745B45DD24F.idx  gstreamer_error_handler.h.9FBC027870DB0CF8.idx  key_codes.h.C22855B27FE79065.idx  keyboard_handler.c.AAA7D11F535E4149.idx  keyboard_handler.h.EDC3675AD428A5B8.idx  live_queue.c.9FE0F81815CF8828.idx  live_queue.h.D50A76FFEEFE89E2.idx  live_tee.c.2721E225B8CA0AB1.idx  live_tee.h.E9DF1E28312EC471.idx  logging.c.8D1852A6041702D8.idx  logging.h.C0415DA4E3FE97F2.idx  main.c.106A47774D5484E7.idx  memory.c.8F8D2E98E74D826F.idx  memory.h.544C4370A77286B0.idx  performance_config.c.5E88E922CE5A936E.idx  performance_config.h.71FF821846F165E9.idx  (+36 more)
.claude/agents/: application-engineer.md  product-manager.md  project-planner.md  software-architect.md  technical-writer.md  test-engineer.md
docs/: ERROR_HANDLING.md  ERROR_HANDLING_RECOVERY.md  IMPLEMENTATION_STATUS.md  TASK_T-8.3_COMPLETION.md  TASK_T-9.4_COMPLETION.md  TEST_IMPLEMENTATION_SUMMARY.md  T_2_4_COMPLETION_REPORT.md
docs/architecture/: COMPOSITE_CAPS.md  FRAME_MONITORING.md  GSTREAMER_ERROR_HANDLING.md  PERFORMANCE_OPTIMIZATION.md  PKG_CONFIG_INTEGRATION.md
docs/implementation/: CAMERA_ERROR_HANDLING.md  EDGE_CASE_HANDLING.md  IMPLEMENTATION_T-10.5.md  IMPLEMENTATION_T-9.2.md  IMPLEMENTATION_T5.4.md  SYSTEM_INTEGRATION_AUDIT.md  T-9.1_IMPLEMENTATION_SUMMARY.md  T-9.1_VERIFICATION.md  T-9.3_IMPLEMENTATION_SUMMARY.md  TASK_T-9.2_COMPLETION.md  TASK_T5_3_IMPLEMENTATION.md  TASK_T76_COMPLETION.md  TASK_T8_2_SUMMARY.md  TASK_T8_4_IMPLEMENTATION_SUMMARY.md  TEE_ELEMENT_IMPLEMENTATION.md
docs/planning/: BRIEF.md  PRD.md  PROJECT_STRUCTURE.md  SDD.md  TTL.md
docs/profiling/: PROFILING_GUIDE.md
docs/testing/: BUILD_TEST_REPORT.md  T-10.4_CODE_STYLE_COMPILATION_REPORT.md
pkgconfig/: AVFoundation.pc  Cocoa.pc  CoreFoundation.pc  CoreMedia.pc  CoreVideo.pc  README.md
scripts/: analyze_profiling.sh  build.sh  format_code.sh  pkgconfig_setup.sh  profile.sh  run.sh  test.sh  test_compile.sh
src/: main.c
src/app/: app_config.h  app_context.c  app_context.h  app_error.c  app_error.h  cleanup_handlers.c  cleanup_handlers.h  e2e_coordinator.c  e2e_coordinator.h  error_dialog.h  error_dialog.m  error_handler_integration.c  error_handler_integration.h  error_recovery_dialog.c  error_recovery_dialog.h
src/camera/: camera_error_handler.c  camera_error_handler.h  camera_monitor.c  camera_monitor.h  camera_permissions.m  camera_source.c  camera_source.h
src/gstreamer/: composite_caps.c  composite_caps.h  gst_elements.c  gst_elements.h  gstreamer_error_handler.c  gstreamer_error_handler.h  live_queue.c  live_queue.h  live_tee.c  live_tee.h  performance_config.c  performance_config.h  pipeline_builder.c  pipeline_builder.h  pipeline_error_recovery.c  pipeline_error_recovery.h  record_bin.c  record_bin.h
src/input/: key_codes.h  keyboard_event_recovery.c  keyboard_event_recovery.h  keyboard_handler.c  keyboard_handler.h
src/osx/: window.c  window.h  window.m  window_event_recovery.c  window_event_recovery.h
src/playback/: playback_bin.c  playback_bin.h  playback_manager.c  playback_manager.h
src/recording/: buffer_manager.c  buffer_manager.h  recording_state.c  recording_state.h
src/utils/: frame_monitor.c  frame_monitor.h  logging.c  logging.h  memory.c  memory.h  profiling.c  profiling.h  timing.c  timing.h
test/: IMPLEMENTATION_SUMMARY_T85.md  PERFORMANCE_TEST_T85.md  TASK_T45_SUMMARY.md  UNIT_TEST_REPORT.md  build_test.py  meson.build  run_unit_tests.py  test_build.sh  validate_test_syntax.py  verify_tests.sh
test/e2e/: E2E_TEST_REPORT.md  IMPLEMENTATION_SUMMARY.txt  README.md  TASK_T103_COMPLETION.md  __init__.py  run_e2e_tests.py  test_app_launch.py  test_camera_permission.py  test_grid_display.py
test/integration/: GPU_MEMORY_BANDWIDTH_BENCHMARK_README.md  INTEGRATION_TEST_SUMMARY.md  T-9.5_TEST_SUMMARY.md  TEST_T76_README.md  meson.build  test_120fps_performance.sh  test_120fps_rendering.c  test_app_lifecycle.c  test_app_startup_timing.py  test_camera_window_integration.c  test_error_edge_cases_t95.c  test_error_recovery_integration.c  test_gpu_memory_bandwidth_benchmark.c  test_gstreamer_pipeline.c  test_osxvideosink_integration.c  test_pipeline_core.c  test_pipeline_error_handling.c  test_playback_bins_lifecycle.c  test_playback_e2e_flow.c  test_profiling_pipeline.c  test_recording_bins_integration.c  test_recording_flow.c  test_sustained_120fps.c  test_sustained_performance.py  test_t105_final_integration.py  test_t105_final_integration.sh  test_tee_stream_splitting.c
test/unit/: meson.build  test_buffer_manager.c  test_camera_error_handler.c  test_camera_init.c  test_composite_caps.c  test_edge_cases_buffer_recording.c  test_frame_monitor.c  test_gstreamer_error_handler.c  test_keyboard_handler.c  test_live_queue.c  test_live_tee.c  test_playback_manager.c  test_profiling_utils.c  test_recording_state.c  test_recording_state_simple.c  test_window_creation.c
test_results/: test_results_sustained_120fps.json  test_results_t105_final_integration.json
(+74 files in other folders)
